# monkey-typer

./: .gitignore  CMakeLists.txt  FileManager.cpp  FileManager.h  Menu.cpp  Menu.h  README.md  ScoreBar.cpp  ScoreBar.h  main.cpp
assets/: businessWords.txt  defaultWords.txt  leaderboard.txt  programmingWords.txt
